created utils and data_models

--- a/notebooks/exp.ipynb
+++ b/notebooks/exp.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "19523bd0",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
     "\n",
     "\n",
     "LLM = Gemini()\n",
-    "print(LLM.complete(system=\"\", user=\"Hello\"))\n"
+    "print(LLM.complete(system=\"\", user=\"Hello\"))"
    ]
   },
   {
